# the-beaconator

./: .contracts-versions  .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PERP_CONFIG_SUMMARY.md  README.md  Rocket.toml  TEST_MIGRATION_SUMMARY.md  calculate_liquidity.py  calculate_script_ticks.py  env.example  modularization-plan.md  openapi.json  package-lock.json  package.json  railway.json  sst.config.ts
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  claude.yml  fork-tests.yml  promote-image.yml  release-image.yml
abis/: Beacon.json  BeaconRegistry.json  DichotomousBeaconFactory.json  ECDSAVerifierAdapter.bytecode  ECDSAVerifierAdapter.json  EcdsaBeacon.json  IdentityBeacon.bytecode  ModuleRegistry.json  Perp.json  PerpFactory.json  PerpHook.json  PerpManager.json  ProtocolFeeManager.json  StepBeacon.json
clients/: README.md
clients/python/: README.md  __init__.py
clients/python/api/beacon/: routes_beacon_batch_create_perpcity_beacon.py  routes_beacon_batch_update_beacon.py  routes_beacon_create_beacon.py  routes_beacon_create_perpcity_beacon.py  routes_beacon_create_verifiable_beacon.py  routes_beacon_register_beacon.py  routes_beacon_update_beacon.py
clients/python/api/information/: routes_info_all_beacons.py  routes_info_index.py
clients/python/api/perpetual/: routes_perp_batch_deploy_perps_for_beacons.py  routes_perp_batch_deposit_liquidity_for_perps.py  routes_perp_deploy_perp_for_beacon_endpoint.py  routes_perp_deposit_liquidity_for_perp_endpoint.py
clients/python/api/wallet/: routes_wallet_fund_guest_wallet.py
clients/python/models/: __init__.py  api_response_for_api_summary.py  api_response_for_array_of_string.py  api_response_for_batch_create_perpcity_beacon_response.py  api_response_for_batch_deploy_perps_for_beacons_response.py  api_response_for_batch_deposit_liquidity_for_perps_response.py  api_response_for_batch_update_beacon_response.py  api_response_for_deploy_perp_for_beacon_response.py  api_response_for_deposit_liquidity_for_perp_response.py  api_response_for_string.py  api_summary.py  batch_create_perpcity_beacon_request.py  batch_create_perpcity_beacon_response.py  batch_deploy_perps_for_beacons_request.py  batch_deploy_perps_for_beacons_response.py  batch_deposit_liquidity_for_perps_request.py  batch_deposit_liquidity_for_perps_response.py  batch_update_beacon_request.py  batch_update_beacon_response.py  beacon_update_data.py  beacon_update_result.py  create_beacon_request.py  create_verifiable_beacon_request.py  deploy_perp_for_beacon_request.py  deploy_perp_for_beacon_response.py  deposit_liquidity_for_perp_request.py  deposit_liquidity_for_perp_response.py  endpoint_info.py  endpoint_status.py  fund_guest_wallet_request.py  register_beacon_request.py  update_beacon_request.py
clients/typescript/: README.md  api.ts
docs/: AWS_DEPLOY.md  TURNKEY_WALLET_SETUP.md
examples/: generate_openapi.rs
scripts/: anvil-cleanup.sh  detect-cores.sh  generate-openapi.sh  refresh-abis.sh
src/: fairings.rs  guards.rs  lib.rs  main.rs  models.rs  models_test.rs  open_maker_position_compliance_test.rs  routes.rs  v4_compliance_tests.rs
src/models/: app_state.rs  beacon_type.rs  component_factory.rs  mod.rs  recipe.rs  requests.rs  responses.rs  wallet.rs
src/routes/: beacon.rs  beacon_type.rs  info.rs  mod.rs  nonce_sync_tests.rs  perp.rs  perp.rs.backup  recipe.rs  test_utils.rs  wallet.rs  wallet_test.rs
src/services/: mod.rs  rpc.rs  safe.rs
src/services/beacon/: batch.rs  component_registry.rs  core.rs  ecdsa.rs  ecdsa_deploy.rs  factory.rs  mod.rs  modular.rs  recipe_registry.rs  registry.rs  verifiable.rs
src/services/perp/: batch.rs  core.rs  mod.rs  operations.rs  validation.rs
src/services/touch/: mod.rs  resolver.rs  worker.rs
src/services/transaction/: events.rs  execution.rs  mod.rs  multicall.rs  receipt.rs
src/services/wallet/: balances.rs  lock.rs  manager.rs  mock.rs  mod.rs  pool.rs  sync.rs  turnkey_api.rs  turnkey_signer.rs
src/test_fixtures/: BeaconFactory.json  PerpHook.json
tests/: mod.rs  test_utils.rs
tests/contracts/: .gitignore  MockBeacon.sol  MockBeaconFactory.sol  MockBeaconRegistry.sol  MockModularFactories.sol  MockMulticall3.sol  MockTouchable.sol  MockUSDC.sol  RevertingTouchable.sol  foundry.toml
tests/fork_config/: addresses.testnet.json
tests/integration_tests/: balance_sweep_tests.rs  beacon_core_integration_tests.rs  beacon_verifiable_integration_tests.rs  factory_integration_tests.rs  fork_tests.rs  mod.rs  models_test.rs  modular_registry_tests.rs  nonce_conflict_tests.rs  nonce_sync_tests.rs  perp_deployment_integration_tests.rs  perp_deployment_integration_tests.rs.disabled  perp_integration_tests.rs  register_beacon_integration_tests.rs  touch_integration_tests.rs  transaction_execution_integration_tests.rs  unregister_beacon_integration_tests.rs  wallet_test.rs
tests/test_fixtures/: BeaconRegistry.json  PerpManager.json
tests/unit_tests/: beacon_tests.rs  factory_beacon_tests.rs  fairings_simple_tests.rs  guards_simple_tests.rs  identity_beacon_bytecode_tests.rs  info_tests.rs  mod.rs  modular_beacon_tests.rs  perp_operations_tests.rs  perp_operations_tests.rs.disabled  perp_route_tests.rs  perp_route_tests.rs.disabled  register_beacon_route_tests.rs  services_beacon_core_tests.rs  services_beacon_verifiable_tests.rs  services_perp_validation_tests.rs  services_transaction_events_simple_tests.rs  services_transaction_execution_comprehensive_tests.rs  services_transaction_multicall_comprehensive_tests.rs  touch_tests.rs  transaction_events_tests.rs  transaction_execution_tests.rs  unregister_beacon_route_tests.rs  wallet_route_tests.rs
