[package]
name = "the-beaconator"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
alloy = { version = "1.5", features = ["full", "node-bindings"] }
dotenvy = "0.15.7"
sentry = { version = "0.32", features = ["anyhow", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hex = "0.4"
# OpenAPI documentation
rocket_okapi = "0.9.0"
schemars = { version = "0.8", features = ["preserve_order"] }

# Multi-wallet management with Redis.
# tokio-rustls-comp + webpki-roots: ElastiCache/Valkey on AWS requires in-transit
# TLS, so the REDIS_URL is `rediss://` — without a TLS feature Client::open fails
# to connect. Plain `redis://` (local/tests) still works; the scheme decides.
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
# Direct dep solely to install the process-level CryptoProvider at startup
# (src/main.rs): with redis's tls-rustls + reqwest's rustls-tls in the same
# tree, rustls 0.23 cannot infer a provider on its own and panics at the first
# TLS connection (the ElastiCache rediss:// connect). ring matches the provider
# already present in the dependency tree.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
hostname = "0.4"
# UUID for instance identification
uuid = { version = "1.0", features = ["v4"] }
# Constant-time comparison for bearer tokens (timing-attack resistance)
subtle = "2"

[dev-dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0"
serial_test = "3.0"
# Testing utilities
tempfile = "3.8"
once_cell = "1.19" 
